--- a/exemple_de_set.env
+++ b/exemple_de_set.env
@@ -1,12 +1,12 @@
-OWNER_NAME="Marisel"
+OWNER_NAME="BERA"
 PREFIX="~"
 PUBLIC_MODE='non'
 AUTO_READ_STATUS="non"
 AUTO_DOWNLOAD_STATUS="oui"
-BOT_NAME= "𝑲𝒊𝒏𝒈 𝑴𝒂𝒓𝒊𝒔𝒆𝒍"
-IMAGE_MENU= "https://telegra.ph/file/3b20d3e67948683aff867.jpg"
+BOT_NAME= "GOKU-V3 "
+IMAGE_MENU= "https://i.ibb.co/HtT3vjm/goku-gif-3.gif"
 NUMERO_OWNER= "254740007567"
-OWNER_NAME= "᚛𝑴𝒂𝒓𝒊𝒔𝒆𝒍᚜"
+OWNER_NAME= "᚛BRUCE BERA᚜"
 DATABASE_URL= ""
 WARN_COUNT= ""
 OPENAI_API_KEY= ""
